--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "connect-mongo": "^3.2.0",
     "connect-mongodb-session": "^2.3.1",
+    "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
@@ -21,8 +23,10 @@
     "mongoose": "^5.9.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/connect-mongo": "^3.1.3",
     "@types/connect-mongodb-session": "^0.0.2",
+    "@types/csurf": "^1.9.36",
     "@types/express": "^4.17.3",
     "@types/express-handlebars": "^3.1.0",
     "@types/express-session": "^1.17.0",
